--- a/style.css
+++ b/style.css
@@ -23,11 +23,10 @@ body {
 
 
 }
-
-.button {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
+.btn {
+    text-transform: unset !important;
+  }
+  
 .section {
     width:100%;
     height: 100vh;
