--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     /*may as well include old browsers*/
 
 
-    -moz-user-select: -moz-none;
+    -moz-user-select: -none;
     -khtml-user-select: none;
     -webkit-user-select: none;
 
@@ -26,7 +26,7 @@ body {
 .btn {
     text-transform: unset !important;
   }
-  
+
 .section {
     width:100%;
     height: 100vh;
@@ -89,23 +89,21 @@ iframe{
 }
          
 #btn-grad1 {
-    background-image: linear-gradient(to right, #1FA2FF 0%, #12D8FA  51%, #1FA2FF  100%);
+    background-image: linear-gradient(to right, #12D8FA  0%, #1FA2FF  100%);
     margin: 10px;
     padding: 15px 45px;
     text-align: center;
-    text-transform: uppercase;
     transition: 0.5s;
     background-size: 200% auto;
     color: white;            
-    box-shadow: 0 0 20px #eee;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+    transition: box-shadow 0.3s ease-in-out;
     border-radius: 30px;
     display: block;
     }
 
 #btn-grad1:hover {
-    background-position: right center; /* change the direction of the change here */
-    color: #fff;
-    text-decoration: none;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
 }
 
 
@@ -115,7 +113,6 @@ iframe{
     margin: 10px;
     padding: 15px 45px;
     text-align: center;
-    text-transform: uppercase;
     transition: 0.5s;
     background-size: 200% auto;
     color: white;            
@@ -125,7 +122,6 @@ iframe{
 }
 
 #btn-grad2:hover {
-    background-position: right center; /* change the direction of the change here */
     color: #fff;
     text-decoration: none;
 }
