--- a/style.css
+++ b/style.css
@@ -23,9 +23,6 @@ body {
 
 
 }
-.btn {
-    text-transform: unset !important;
-  }
 
 .section {
     width:100%;
@@ -89,41 +86,49 @@ iframe{
 }
          
 #btn-grad1 {
-    background-image: linear-gradient(to right, #12D8FA  0%, #1FA2FF  100%);
+    background-image: linear-gradient(to right, #12eafa  0%, #0084ff  100%);
     margin: 10px;
     padding: 15px 45px;
     text-align: center;
     transition: 0.5s;
     background-size: 200% auto;
+    border: none;
     color: white;            
-    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-    transition: box-shadow 0.3s ease-in-out;
+    box-shadow: 0 10px 15px rgba(0,0,0,0.1);
     border-radius: 30px;
     display: block;
     }
 
 #btn-grad1:hover {
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.5);
 }
 
-
+#btn-grad1:active {
+    transform: scale(0.9, 0.9);
+    transition: transform 0.1s ease-in-out;
+}
          
 #btn-grad2 {
+    border: none;
     background-image: linear-gradient(to right, #DD5E89 0%, #F7BB97  51%, #DD5E89  100%);
     margin: 10px;
     padding: 15px 45px;
     text-align: center;
     transition: 0.5s;
     background-size: 200% auto;
+    box-shadow: 0 10px 15px rgba(0,0,0,0.1);
     color: white;            
-    box-shadow: 0 0 20px #eee;
     border-radius: 30px;
     display: block;
 }
 
 #btn-grad2:hover {
-    color: #fff;
-    text-decoration: none;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.5);
+}
+
+#btn-grad2:active {
+    transform: scale(0.9, 0.9);
+    transition: transform 0.1s ease-in-out;
 }
 
 #btn-grad1 a{
