--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
 
 }
 
+
 .section {
     width:100%;
     height: 100vh;
@@ -36,7 +37,9 @@ body {
     color: white;
 }
 
-#page-3 {background-color:#fff;}
+#page-3 {
+    background-color:#fff;
+}
 
 
 .header {
@@ -225,19 +228,21 @@ hr {
 
 
 
+
 .media {
     display: flex;
     justify-content: center;
     max-width:800px;
     margin:0 auto;
+    padding:40px;
 }
 
 .media img {
-    padding: 20px;
-    border-radius: 40px;
     width: 100%;
     height: 100%;
 }
+
+
 
 .gallery {
     left: 50%;
@@ -523,10 +528,45 @@ hr {
 }
 
 
+.donate {
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
 
+.donate h1 {
+    text-align: center;
+}
+
+
+
+/*FOOTER*/
+
+.footer {
+    padding-bottom: 10px;
+    position: absolute;
+    bottom: 1;
+    background-color:#303133;
+    color: white;
+    width: 100%;
+    text-align: center;
+}
+
+.footer a {
+    text-decoration: none;
+    color: #efcbed;
+    text-align: center;
+    float: center;
+    margin: 10px;
+}
+
+.footer a:hover {
+    opacity: .7;
+}
 
 
 /* Responsiveness */
+
+
 
 @media (max-width: 800px) {
   .flex-container {
@@ -549,14 +589,25 @@ iframe{
     width: 100%;
 }
 
-#page-2 {
-    display: none;
-}
+
+
 
 .arrows {
     display:none;
 }
 
+.section {
+    width:100%;
+    height: 100%;
 }
 
+.gallery {
+    width: 100%;
+}
+
+.gallery .thumbnails {
+    display: flex;    
+}
+
+}
 
